@@ -7,7 +7,6 @@ import io.github.pedroermarinho.comandalivreapi.domain.validation.Validation;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -22,7 +21,7 @@ public class StatusUser {
 
     @Transactional
     public UserDTO disableUser(UUID id) {
-        final List<Validation<UUID>> validations = Arrays.asList(new NotNullValidation<>());
+        final List<Validation<UUID>> validations = List.of(new NotNullValidation<>());
 
         validations.forEach(validation -> validation.validationThrow(id));
 
@@ -31,7 +30,7 @@ public class StatusUser {
 
     @Transactional
     public UserDTO enableUser(UUID id) {
-        final List<Validation<UUID>> validations = Arrays.asList(new NotNullValidation<>());
+        final List<Validation<UUID>> validations = List.of(new NotNullValidation<>());
 
         validations.forEach(validation -> validation.validationThrow(id));
 
